# disko

./: .gitignore  .travis.yml  CITATION.cff  Makefile  Makefile.venv  README.md  install.sh  prof.py  pyproject.toml  requirements.txt  sequential_test.sh  setup.py
.github/workflows/: package.yaml  testing.yaml
disko/: __init__.py  bayes_cli.py  cli.py  disko.py  disko_ms.py  draw_cli.py  draw_sky.py  healpix_sphere.py  ms_helper.py  multivariate_gaussian.py  parser_support.py  projection_lsqr.py  resolution.py  scheduler_context.py  sphere.py  sphere_mesh.py  svd_cli.py  telescope_operator.py  util.py
disko/fov/: __init__.py  factory.py
disko/tests/: test_disko.py  test_disko_ms.py  test_meshsphere.py  test_multivariate.py  test_projection_lsqr.py  test_pylops_operator.py  test_sphere.py  test_subsphere.py  test_telescope_operator.py
docker/: Dockerfile  Makefile  docker-compose.yml
movie/: .gitignore  Makefile
test_data/: Makefile  vis_2021-03-25_20_50_23.568474.hdf
test_data/test.ms/: table.f0  table.f1  table.f1i  table.f2  table.f3  table.f3_TSM0  table.f4  table.f5  table.f6
test_data/test.ms/ANTENNA/: table.f0
test_data/test.ms/FEED/: table.f0  table.f0i
test_data/test.ms/FIELD/: table.f0  table.f0i
test_data/test.ms/OBSERVATION/: table.f0
test_data/test.ms/POLARIZATION/: table.f0  table.f0i
test_data/test.ms/SOURCE/: table.f0
test_data/test.ms/SPECTRAL_WINDOW/: table.f0
